<resources>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="app_name">SounD CHK</string>
    <string name="menu_home">Home</string>
    <string name="menu_camera">QR Code Reader</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_favorites">Favorites</string>
    <string name="text_read_QR">Reading QR Code...</string>
    <string name="title_activity_story_page">StoryPageActivity</string>
    <string name="read_more">"Tap to Unlock with QR Code to READ MORE"</string>
    <string name="griffs_short_text">
        "THE DOC WILL SEE YOU NOW\n"

        "<i>Dr. Griffs</i>\n\n"

        "Written by Ruairi Conway\n\n"

        "Aleem Griffiths is taking on life with a PhD in Partyology. This self-taught disc jockey is on a mission to make your day, and with a grin like his how can he fail? Dubbed Dr. Griffs a.k.a. The Doctor a.k.a. Mr. Caribash a.k.a. Mr. DecipherThisYouMay, his character and charisma go from strength to strength. But he is more than music. That’s just the tip of his entrepreneurial iceberg. You’ll find his name across a range of merchandise, a platform on YouTube, and photography has found a home in his heart too.\n\n"
    </string>
    <string name="griffs_long_text">
        "As the youngest of five siblings living in the South Bronx, he grew up in a family of chess"
        "players. Chess played a big roll in Griffith’s early life, it kept him amongst the right people"
        "and he and his brothers shared a passion for it.\n\n"

        "“I didn’t have a problem with playing chess but I always knew there was more to life than following directly in their footsteps.“\n\n"

        "Not sure of his own footsteps just yet, his sisters convinced him to join a program called"
        "BuildOn. During his sophomore and junior years of high school, Griffiths traveled to"
        "impoverished areas of Mali and Nicaragua and helped with the construction of amenities"
        "such as schools. It left a mark on Griffiths and opened his eyes to what good he could give"
        "back to this floating green and blue rock of ours.\n\n"

        "This perspective focused Griffiths on an immensely ambitious life goal;“Millionaire by 27, billionaire by 35”."

        "How does one go about reaching these goals? You grind. Aleem found his way to the University"
        "of Rochester and has squeezed every ounce of opportunity from this city. Holding onto his"
        "billionaire mindset he knew a conventional job would not help him reach his goal. That’s when"
        "fate gave him a wink and a nudge. During his freshman year, a graduating senior that Griffiths"
        "had befriended asked him to take his spot as one of the regular Djs on campus.\n\n"

        "“I jumped on the idea. DJing wasn’t something I had ever done before. In fact, at that point"
        "in my life I had only been to like 4 or 5 parties. I lived in the hood and my mother sheltered"
        "me from that.”\n\n"

        "It took a little time for Griffiths to find his feet on a side of the musical world that"
        "he was unaccustomed to. Griffiths was starting from the ground up.\n\n"

        "“Because of this, when I would go to parties, I would document a party from start to finish."
        "I would try to understand exactly what was being played and how they were playing it”.\n\n"

        "Pouring over lists of parties past, he recorded the DJs every move. He documented each track"
        "played and would rate every transition. While everyone partied and danced the night away,"
        "Dr. Griffiths was looking for enlightenment.\n\n"

        "“I would do this pretty religiously for every party I went to especially if it’s a DJ"
        "I haven’t heard before. I wouldn’t copy their playlist but if I was stuck during a party"
        "that I was DJing, looking through my notes could help me get out of a tight spot”.\n\n"

        "We all know that every good DJ needs a good name so why Dr. Griffs? Well during senior year"
        "everyone was putting names on their class hoodies. Excited about the prospect Griffiths"
        "debated having “Da Griffs” in homage to “Da Bronx”, but he had a change of heart.\n\n"

        "“I’m going to college, I’m going to be professional, so I should put doctor. College = PhD = Doctor, know what I’m saying?”\n\n"

        "And so Dr. Griffs was born.\n\n"

        "“My dad was from Jamaica (He passed away when Griffiths was 10), and my mom is from St. Thomas."
        "Because of this reggae has always been a big part of my life. [We] lived above a bodega so"
        "there was always Latin based music being blasted below me and the cars driving by my block"
        "would always play the latest rap and hip hop songs.”\n\n"

        "Even his siblings are responsible for guiding Griffiths taste in some way. Theme songs from"
        "anime shows and the teenage angst of fallout boy played a big part and I’m sure we can all"
        "relate to that sentiment.\n\n"

        "“My block was filled with people from the Caribbean, Mexico, Africa everything really except"
        "people from Europe. There was no white people on my block which is probably why I’m not an EDM DJ."
        "So I guess all of that combined kinda help craft my style”\n\n"

        "DJing quickly became Dr. Griffs passion and now that he had a name, some basics, and a style,"
        "the only thing left to do was dive head first into it.\n\n"

        "“I tried, tried, and kept trying and while I was DJing I picked up confidence in myself”.\n\n"

        "As that confidence has continued to grow, so has his following. He’s now a regular on the local"
        "circuit appearing at venues such as Bar 145 and there’s nothing but good vibes resonating from"
        "anyone who’s danced to the Doctors beats.\n\n"

        "Working under Bdubd Enterprise, a local promotional group, has given Griffiths a huge lift.\n\n"

        "“Thanks to Bdubd I almost always had a platform to DJ every week. As I got better, opportunities"
        "on campus became better for me through different organizations like the BSU (Black Students Union),"
        "SALSA (A Latin dance/music club), and the DLH (Douglas Leadership House) started reaching out to me.”\n\n"

        "Griffiths is a thoroughly active member of the universities life. He himself is a member of"
        "the Douglas Leadership House. He first encountered them back in 2013 during his freshman year.\n\n"

        "Following racially charged incidents on campus, he followed a demonstration organized by the DLH"
        "and BSU. He was in awe of the power and integrity they displayed. After joining their ranks he"
        "became the DLH historian. This is where photography found its way into his mix.\n\n"

        "“DJing inspired me to take photography seriously, my beat making seriously and now my merch.”\n\n"

        "The list doesn’t end there, Griffiths has also begun voicing his thoughts and opinions on YouTube.\n\n"

        "Right now Dr. Griffs is riding a wave of popularity. The merchandise he speaks off is popping"
        "up all over the local communities social media. It’s simple but if you give people a clever"
        "t-shirt design with some bold colors, the orders come flooding in, and voila, you have walking"
        "billboards with your name on them. It’s been a huge success for Griffiths.\n\n"

        "Looking to the future, looking to Rochester and looking to graduation, Griffiths is excited"
        "to give back to the communities that he’s enjoyed and learned from. “My favorite venue to DJ"
        "at is Water Street Music Hall. Every time I’ve DJed there it was for a huge party Bdubd’s"
        "Halloween party. Rochester being a city of a lot of jazz Giants and Eastman there’s a lot of musical potential.”\n\n"

        "What’s next for Dr. Griffs? Well on top of studying for finals there’s DJing, photography,"
        "producing his own original beats, creating YouTube videos and leading the DLH, it looks like"
        "he’s got his hands full. But he’s taking it in his stride. The only way is up and you can"
        "guarantee he’ll find his sweet spot.\n\n"

        "As Dr. Griffs would say #DecipherThisAsYouMay\n\n"
    </string>
    <string name="little_short_text">
        "THE LITTLE BOX\n\n"

        "Written by Nina Listro\n\n"

        "Our crew walked into The Little Box around 7:30pm on the evening of one of their shows. The"
        "main entrance, a sliding glass door, opened immediately to the kitchen where the producers"
        "were cooking up enchiladas. Without hesitation, we were offered beers and a seat on their couch.\n\n"

        "As you may have guessed, the place is anything but you’re conventional music venue. It’s a house"
        "- a typical college rental just across the river from the University of Rochester. Four university"
        "seniors live, eat and sleep there, occasionally hosting gigs in their basement.\n\n"
    </string>
    <string name="text_the_little_box">The Little Box</string>
    <string name="title_juicy_connotation">Juicy Connotation</string>
    <string name="del_paxton">Album Review: Del Paxton</string>
    <string name="title_rosehip">Album Review: Rosehip</string>
    <string name="title_wagoneer">Album Review: Grand Wagoneer</string>
    <string name="title_artawake">Gig: Art Awake 2017</string>
    <string name="title_bugjar">Gig: Bugjar</string>
</resources>