<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/feedFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:scrollbarThumbVertical="@drawable/scrollbar_feed"
            tools:context="com.soundchkapp.soundchk.MainActivityBottomBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <Button
                android:text="@string/text_dr_griffs"
                android:textStyle="bold"
                android:background="@drawable/final_button_griffs"
                android:textColor="@color/colorWhite"
                android:alpha="0.6"
                android:scaleType="fitXY"
                android:id="@+id/button"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textSize="25sp"/>

            <Button
                android:text="@string/text_the_little_box"
                android:textStyle="bold"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/final_button_little"
                android:scaleType="fitXY"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:alpha="0.6"
                android:layout_marginStart="5dp"
                android:id="@+id/button2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:text="@string/title_juicy_connotation"
                android:textStyle="bold"
                android:background="@drawable/final_button_juicy"
                android:layout_height="200dp"
                android:layout_width="match_parent"
                android:id="@+id/button3"
                android:textSize="25sp"
                android:alpha="0.6"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="3">
            <Button
                android:text="@string/del_paxton"
                android:textStyle="bold"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/final_button_paxton"
                android:id="@+id/button4"
                android:alpha="0.6"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="10dp"/>

            <Button
                android:text="@string/title_rosehip"
                android:textStyle="bold"
                android:background="@drawable/final_button_rosehip"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/button5"
                android:textColor="@color/colorWhite"
                android:shadowColor="@color/colorBlack"
                android:layout_marginEnd="10dp"
                android:alpha="0.6"/>

            <Button
                android:text="@string/title_wagoneer"
                android:textStyle="bold"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background='@drawable/final_button_wagoneer'
                android:scaleType="fitCenter"
                android:alpha="0.6"
                android:textColor="@color/colorWhite"
                android:id="@+id/button6"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:text="@string/title_artawake"
                android:textStyle="bold"
                android:background="@drawable/final_button_artawake"
                android:textColor="@color/colorWhite"
                android:alpha="0.6"
                android:scaleType="fitXY"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textSize="25sp"/>

            <Button
                android:text="@string/title_bugjar"
                android:textStyle="bold"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/final_button_bugjar"
                android:scaleType="fitXY"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:alpha="0.6"
                android:layout_marginStart="5dp"
                android:id="@+id/button8"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
